[package]
name = "utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
path = "lib.rs"

[dependencies]
tch.workspace = true
crossbeam = "0.8.3"
derive_setters = "0.1.6"
parking_lot = "0.12.1"
pyo3 = { version = "0.20.2", features = ["auto-initialize"] }
rand = "0.8.5"
typed-builder = "0.18.0"

[build-dependencies]
glob = "0.3.1"

[lints]
workspace = true
